--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   We do Accessiblity testing and offer VPAT Documents for Section 508 and WCAG Compliance.
 
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://www.vpat-compliant.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://vpat-compliant.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 twitter_username: jekyllrb
 github_username:  jekyll
