--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: VPAT Compliant
+title: Kaffeinated Kodemonkey
 email: info@vpat-compliant.com
 description: >- # this means to ignore newlines until "baseurl:"
   We do Accessiblity testing and offer VPAT Documents for Section 508 and WCAG Compliance.
