--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ url: "https://vpat-compliant.com" # the base hostname & protocol for your site, 
 
 twitter_username: jekyllrb
 github_username:  jekyll
+linkedin: kaffeinatedkodemonkey
 
 # Build settings
 markdown: kramdown
